5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1716_2508.log
== TEST (2019-05-14 17:02:45) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(n < cont):
	if(num == 1):
		print(i)

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:14) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(num == 1):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(num == 1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:37) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(num == 1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:59) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i * (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
1.1e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:04) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i * (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
1.1e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:10) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i * (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
1.1e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:36) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i + (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:39) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i + (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:44) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i + (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:08:49) 
-- CODE:
n = int(input("Digite o numero: "))
i = 3
cont = 1

while(cont < n):
	if(n == 1):
		print(i)
	else:
		den = (cont*2) * (cont*2 + 1) * (cont*2 + 2)
		i = i + (-1)**(cont+1)*4/den
		cont = cont + 1
		
print(round(i,8))		

-- EXECUTION TIME:
0.144153
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
